# yt-tool

./: .gitignore  README.md  create_subtitle.py  gui.py  main.py  pyproject.toml  subtitle_service.py  transcribe_video.py
